fixed text wrapping

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -343,6 +343,7 @@ textarea {
 .body {
   margin-top: 15px;
   margin-bottom: 5px;
+  white-space: pre-wrap;
 }
 
 // photo display
